# hsolo

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  environment.yml  hsolo_example.ipynb  setup.py
example_data/: README.md
include/: HSolo.h  HSoloTypes.hpp  HSoloUtils.h  TransformSolvers.hpp  TransformValidator.hpp
matlab/: estimateGeometricTransformHSolo2D.m  findHomographyHSoloMEX.cpp  hsolo_example.m
pyhsolo/: __init__.py
src/: HSolo.cpp  HSoloUtils.cpp  hsolo_example.cpp  python_bindings.cpp
